# zk-book

./: .buildinfo  .dprint.jsonc  .gitignore  CNAME  README.html  README.md  _config.yml  _toc.yml  ecc-addition.html  genindex.html  group-theory.html  hk.pkl  intro.html  intro.md  justfile  mise.toml  notebooks.html  notebooks.ipynb  objects.inv  pyproject.toml  requirements.txt  rings-fields.html  rings-fields.md  search.html  searchindex.js  set-theory.html  set-theory.md  setup
.github/workflows/: deploy.yml  main.yml
_sources/: README.md  ecc-addition.md  group-theory.md  rings-fields.md  set-theory.md
docs/: _config.yml  _toc.yml  ecc-addition.md  group-theory.md  rings-fields.md
